name:                samegame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/battermann/haskell-samegame
license:             BSD3
license-file:        LICENSE
author:              Leif Battermann
maintainer:          leifbattermann@gmail.com
copyright:           2019 Leif Battermann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable samegame
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       lens,
                       containers,
                       random
