name:                samegame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/battermann/haskell-samegame
license:             BSD3
license-file:        LICENSE
author:              Leif Battermann
maintainer:          leifbattermann@gmail.com
copyright:           2019 Leif Battermann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable samegame
  ghc-options:         -Wall -threaded -rtsopts
  hs-source-dirs:      app
  main-is:             Search.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       samegame,
                       lens,
                       containers,
                       random,
                       appendmap,
                       parallel-io

executable play
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             Play.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       samegame,
                       lens,
                       containers,
                       random,
                       appendmap                                          

library
  ghc-options:         -Wall
  exposed-modules:     SameGame
                       SameGameModels,
                       MonteCarlo,
                       Games,
                       SearchState,
                       List.Extra
  build-depends:       base >= 4.7 && <5,
                       lens,
                       containers,
                       random,
                       appendmap,
                       parallel-io
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       hspec,
                       samegame,
                       QuickCheck                     
  default-language:    Haskell2010